[metadata]
name = ValoAPY
version = 1.2.0
author = Kai Konze
author_email = kaicrafter2000@gmail.com
description = An API for Valorant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mettwasser/ValoAPY
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False